--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Hello Coursera!</title>
+	<title> Your CR portal </title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1> Hello Coursera! Its an awkward course till now</h1>
+<nav id="navbar">
+
+	<ul>
+		<li><a href="#navbar"> Home </a></li>
+		<li><a href="#about"> About MyCR </a></li>
+		<li><a href="#why"> Why MyCR </a></li>
+		<li><a href="#login"> Login </a> </li>
+	</ul>
+</nav>
+
+<section>
+	<div class="intro-container">
+		<br><br><br>
+		<h1 align="center">
+			My CR
+		</h1>
+		<br><br><br>
+	</div>
+</section>
+
+<section id="about">
+	<div class="about-container">
+		<h2>About the platform</h2>
+		<p>My CR connects you with your representative in all matters that concerns you and the class. Maintains the record of requests and the actions that have been taken about them, which at the end of CR term helds him/ her accountable for their performance </p>
+		<p>For the represemtatives, it serves as a To-do list and broadcast platform to subside any communication lag with students and tackle issues on priority bases</p>
+	</div>
+</section>
+
+<section id="why">
+	<div class="why-container">
+		<h2>Why MyCR? </h2>
+		<ul>
+			<li>Maintains a track of current class topics and issues</li>
+			<li>Serves as a dedicated portal for academic issues</li>
+			<li>Incrreses representative accountability</li>
+			<li>Broadcast your messages to the entire class so that no one misses anything</li>
+			<li>Forget missing important content because of rubbish chit-chats in Whatsapp groups</li>
+		</ul>
+	</div>
+</section>
+
+<section id="login">
+	<div class="login-container">
+		<form>
+			<label for="institute-name">Institute Name : </label>
+			<input type="text" name="institute-name"> <br><br>
+			<label for="branch-name">Branch : </label>
+			<input type="text" name="branch-name"> <br><br>
+			<label for="rollno"> Roll Number : </label>
+			<input type="Number" name="rollno"> <br><br>
+			<label for="password-create">Create Password : </label>
+			<input type="Password" name="password-create"> <br><br>
+			<label for="Submit"> Submit & Continue</label>
+			<label for="login"> Or login </label>
+		</form>
+	</div>
+</section>
+
 </body>
 </html>
