--- a/site/prac1.html
+++ b/site/prac1.html
@@ -1,8 +1,31 @@
-<!doctype html>
+<!DOCTYPE HTML>
+<html>
 <head>
 	<meta charset="utf-8">
-	<title>Practice</title>
+	<title> ABCD </title>
 </head>
 <body>
-	<p> This is going good!</p>
+	<h1> This is the heading </h1>
+	<div> This is a division </div>
+	<span> Span after div </span>
+	<div> Div <span> Span in div </span></div>
+	<br>
+	<section>
+		Section 1
+		<article>Article 1</article>
+		<article>Article 2</article>
+	</section>
+	<br>
+	<a href="#art3"> Article 3 </a>
+	<br>
+	<a href="#art4"> Article 4 </a>
+	<br>
+	<br>
+	<section>
+		Section 2
+		<article id="art3">Artcle 3</article>
+		<article id="art4">Artile 4</article>
+	</section>
+
 </body>
+</html>
